Fixed issue where project images in flex container were leaking off screen

--- a/style.css
+++ b/style.css
@@ -58,6 +58,21 @@ nav a {
     font-size: 2rem;
 }
 
+.stripe-banner {
+    margin-top: 0;
+    height: 10vw;
+    background-image: linear-gradient(45deg, #e63946 10%, #f1faee 10%, #f1faee 20%, #a8dadc 20%, #a8dadc 30%, #457b9d 30%, #457b9d 40%, #1d3557 40%, #1d3557 50%, #e63946 50%, #e63946 60%, #f1faee 60%, #f1faee 70%, #a8dadc 70%, #a8dadc 80%, #457b9d 80%, #457b9d 90%, #1d3557 90%, #1d3557 100%);
+    background-size: 141.42px 141.42px;
+    display: flex;
+    justify-content: flex-end;
+    text-align: right;
+    padding: 2% 6%;
+}
+
+.stripe-banner h3 {
+    margin-top: 0;
+}
+
 
 .wrapper {
     max-width: 80vw;
@@ -99,6 +114,7 @@ nav a {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .project {
@@ -121,7 +137,7 @@ nav a {
 .project:first-child {
     background-attachment: fixed;
     background-size: 80%;
-    min-width: 400px;
+    min-width: 300px;
     min-height: 300px;
     flex-basis: 100%
 }
@@ -161,11 +177,30 @@ nav a {
         flex: 0 0 100%;
         text-align: left;
         border-right: none;
-        font-size: 5rem;
+        padding-bottom: 5px;
+        margin-bottom: 10px;
+        font-size: 3rem;
     }
 
     .page-section > div {
         flex: 0 0 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .project, .project:first-child {
+        flex-basis: 100%;
+    }
+
+    .project:first-child {
+        min-height: 200px;
+        background-attachment: scroll;
+        background-size: cover;
+    }
+
+    .stripe-banner {
+        justify-content: center;
+        text-align: center;
     }
 }
 
